# SimRankLowrank

./: .gitignore  Demo.ipynb  README.md
ccode/: CMakeLists.txt  main.cpp
ccode/SimRankLowrank/: CMakeLists.txt  main.cpp
ccode/SimRankLowrank/src/: Parameters.cpp  SimRankLowrank.cpp  SimRankLowrank.hpp
ccode/src/: Parameters.cpp  Parameters.hpp  SimRankBase.hpp  SimRankLowrank.cpp  SimRankLowrank.hpp
data/: data.mat  delaunay_n10.mat  delaunay_n11.mat  delaunay_n11.mtx  delaunay_n12.mat  delaunay_n12.mtx  delaunay_n13.mat  delaunay_n14.mat  delaunay_n14.mtx  uk.mat  vsp_data_and_seymourl.mat  vsp_data_and_seymourl.mtx
mcode/: load_data.m  main.m  simrank.m  simrank_lowrank.m  simrank_lowrank_implicit.m
